Fix background container position being too high

--- a/style.css
+++ b/style.css
@@ -201,7 +201,8 @@ div#background-container {
 	justify-content: center;
 	left: 0;
 	right: 0;
-	height: 100vh;
+	top: 0;
+	bottom: 0;
 }
 div#background-container svg {
 	position: absolute;
